<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_user_name_hint">Enter your username</string>
    <string name="title_login_save_login_info">Save login info</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_employee_management">Employee Management</string>
    <string name="table_header_id">No.</string>
    <string name="table_header_name">Full Name</string>
    <string name="table_header_email">Email</string>
    <string name="employee_description">The employee list in this system is regularly updated to ensure accuracy and transparency in internal operations. Keeping track of each individual not only supports administrative management goals but also serves as a foundation for implementing long-term HR plans such as training, promotions, rewards, or transfers.\n\nThis list also acts as an effective tool for inter-departmental coordination. By keeping email contact information up to date, users can actively connect, send documents, or request assistance without wasting time searching for scattered details. Additionally, the system can later support adding notes like phone numbers, departments, birthdays, or notable achievements, contributing to a friendly and professional workplace culture.</string>
</resources>
